update stairs and roof

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 			
 			
 			var geo = new THREE.BoxGeometry(30,0.1,30) ; 
-			var material = new THREE.MeshBasicMaterial( {color: 0x003366} );
+			var material = new THREE.MeshBasicMaterial( {color: 0xFFDDDD} );
 			teto = new THREE.Mesh(geo,material) ;
 			teto.position.set(0, 6, 0) ;   
 			scene.add(teto) ; 
